[package]
name = "adventofcode_2022"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "day1_part1"
path = "src/day1/part1.rs"

[[bin]]
name = "day1_part2"
path = "src/day1/part2.rs"

[[bin]]
name = "day2_part1"
path = "src/day2/part1.rs"

[[bin]]
name = "day2_part2"
path = "src/day2/part2.rs"

[[bin]]
name = "day3_part1"
path = "src/day3/part1.rs"

[[bin]]
name = "day3_part2"
path = "src/day3/part2.rs"

[[bin]]
name = "day4_part1"
path = "src/day4/part1.rs"

[[bin]]
name = "day4_part2"
path = "src/day4/part2.rs"
