[package]
name = "adventofcode_2022"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "day1_part1"
path = "src/day1/part1.rs"

[[bin]]
name = "day1_part2"
path = "src/day1/part2.rs"

[[bin]]
name = "day2_part1"
path = "src/day2/part1.rs"

[[bin]]
name = "day2_part2"
path = "src/day2/part2.rs"

[[bin]]
name = "day3_part1"
path = "src/day3/part1.rs"

[[bin]]
name = "day3_part2"
path = "src/day3/part2.rs"

[[bin]]
name = "day4_part1"
path = "src/day4/part1.rs"

[[bin]]
name = "day4_part2"
path = "src/day4/part2.rs"

[[bin]]
name = "day5_part1"
path = "src/day5/part1.rs"

[[bin]]
name = "day5_part2"
path = "src/day5/part2.rs"

[[bin]]
name = "day6_part1"
path = "src/day6/part1.rs"

[[bin]]
name = "day6_part2"
path = "src/day6/part2.rs"

[[bin]]
name = "day7_part1"
path = "src/day7/part1.rs"

[[bin]]
name = "day7_part2"
path = "src/day7/part2.rs"

[[bin]]
name = "day8_part1"
path = "src/day8/part1.rs"

[[bin]]
name = "day8_part2"
path = "src/day8/part2.rs"

[[bin]]
name = "day9_part1"
path = "src/day9/part1.rs"